Fix footer on mobile

--- a/front-end/src/app/components/home-page/home-page.component.css
+++ b/front-end/src/app/components/home-page/home-page.component.css
@@ -5,6 +5,16 @@ html, body, .mat-app-background {
     text-align: center;
 }
 
+@media only screen and (min-width: 1280px) {
+    html, body, .mat-app-background {
+        position: static;
+    }
+
+    .footer-content {
+        max-width: 1000px;
+    }
+}
+
 button {
     background: none;
     border: none;
@@ -122,8 +132,8 @@ footer {
 }
 
 .footer-content {
-    min-width: 1000px;
-    height: 8rem;
+    width: 100%;
+    height: 7rem;
     margin: 2rem;
     display: flex;
     justify-content: space-between;
@@ -149,8 +159,3 @@ footer {
     margin-right: 0.33rem;
 }
 
-@media only screen and (min-width: 525px) {
-    html, body, .mat-app-background {
-        position: static;
-    }
-}
